# Ruslanas-photo-renamer

./: .gitignore  BAZA PHOTO.xlsx  CMakeLists.txt  CMakePresets.json  Database photos.xlsx  Database photos2.xlsx  config.txt  executor.sh  main.cpp  test.xlsx
OpenXLSX/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  (+6 more)
src/: CMakeLists.txt  main.cxx  main.hxx
src/color/: CMakeLists.txt  color.hpp
src/config/: CMakeLists.txt  config.cxx  config.hxx
src/database/: CMakeLists.txt  database.cxx  database.hxx
src/logger/: CMakeLists.txt  logger.cxx  logger.hxx
src/macros/: CMakeLists.txt  macros.cxx  macros.hxx
src/macros/00_copy_tests/: CMakeLists.txt  copyTests.cxx  copyTests.hxx
src/macros/00_remove_ids_from_dirs/: CMakeLists.txt  removeIdsFromDirs.cxx  removeIdsFromDirs.hxx
src/macros/01_name_files_by_date/: CMakeLists.txt  nameFilesByDate.cxx  nameFilesByDate.hxx
src/macros/02_append_EC_to_file/: CMakeLists.txt  appendECToFile.cxx  appendECToFile.hxx
src/macros/03_copy_file_set_prefix_with_AB/: CMakeLists.txt  copyFileSetPrefixWithAB.cxx  copyFileSetPrefixWithAB.hxx
src/macros/04_group_files_by_EC/: CMakeLists.txt  groupPhotosByEC.cxx  groupPhotosByEC.hxx
src/macros/05_group_dirs_by_brand/: CMakeLists.txt  groupDirsByBrand.cxx  groupDirsByBrand.hxx
src/macros/06_group_dirs_by_model/: CMakeLists.txt  groupDirsByModel.cxx  groupDirsByModel.hxx
src/macros/07_convert_to_jpg/: CMakeLists.txt  convertToJpg.cxx  convertToJpg.hxx
src/macros/08_remove_prefixes_in_files/: CMakeLists.txt  removePrefixesInFiles.cxx  removePrefixesInFiles.hxx
src/macros/09_delete_files_with_EC/: CMakeLists.txt  deleteFilesWithEC.cxx  deleteFilesWithEC.hxx
src/macros/10_rename_AB_to_EC_files/: CMakeLists.txt  renameABToECFiles.cxx  renameABToECFiles.hxx
src/macros/11_check_EC_dir_file_match/: CMakeLists.txt  checkECDirFileMatch.cxx  checkECDirFileMatch.hxx
src/macros/12_mark_found_EC_and_sized_files/: CMakeLists.txt  markFoundECAndSizedFiles.cxx  markFoundECAndSizedFiles.hxx
src/macros/13_copy_missing_AB_files/: CMakeLists.txt  copyMissingABFiles.cxx  copyMissingABFiles.hxx
src/macrosExecutor/: CMakeLists.txt  macrosExecutor.cxx  macrosExecutor.hxx
src/utils/: CMakeLists.txt  utils.cxx  utils.hxx
(+2 files in other folders)
